# fgen

./: README.md  meson.build  meson_options.txt
.githooks/: pre-commit
docs/api/: doxy-api-index.md  doxy-api.conf.in  generate_examples.sh  meson.build
docs/guides/: conf.py  index.rst  meson.build
docs/guides/linux_gsg/: linux_gsg.rst
docs/guides/pmds/: af_packet.rst  af_xdp.rst  memif.rst  overview.rst  ring.rst
docs/guides/prog_guide/: cnet.rst  crypto.rst  glossary.rst  graph_lib.rst  idlemgr.rst  index.rst  intro.rst  mempool_lib.rst  msgchan.rst  overview.rst  pktmbuf_lib.rst  ring_lib.rst  xskdev_buffer_mgmt.rst
docs/guides/rel_notes/: 20.06.rst  20.11.rst  21.01.rst  21.03.rst  21.06.rst  21.09.rst  22.01.rst  22.04.rst  22.08.rst  deprecation.rst  known_issues.rst
docs/guides/sample_app_ug/: WireGuard.rst  cli.rst  cndpfwd.rst  cnet_graph.rst  compiling.rst  hello_world.rst  index.rst  intro.rst  k8s_dp_integration.rst  l3_forward_graph.rst  phil.rst  timer.rst  vpp-plugin.rst
docs/guides/testcne_app_ug/: index.rst  testcne.rst
examples/: meson.build
examples/pktperf/: meson.build  parse.c  pktperf.c  stats.c
include/: fgen_buf.h  fgen_common.h  fgen_cycles.h  fgen_strings.h  meson.build
include/net/: fgen_ether.h  fgen_ip.h  fgen_net.h  fgen_udp.h  fgen_vxlan.h
lib/: meson.build
lib/core/: decode.c  decode.h  encode.c  fgen.c  fgen.h  meson.build
lib/fgen/: decode.h  encode.c  fgen.c  fgen.h  meson.build
lib/include/: fgen_atomic.h  fgen_byteorder.h  fgen_common.h  fgen_gettid.h  fgen_strings.h  fgen_version.h  meson.build
lib/include/net/: fgen_arp.h  fgen_gre.h  fgen_gtp.h  fgen_icmp.h  fgen_mpls.h  fgen_sctp.h  fgen_tcp.h
lib/log/: fgen_log.c  fgen_log.h  meson.build
lib/mmap/: fgen_mmap.c  meson.build  mmap_private.h
lib/osal/: fgen_stdio.c  fgen_stdio.h  fgen_system.c  fgen_system.h  fgen_tty.c  fgen_tty.h  meson.build  netdev_funcs.c  netdev_funcs.h  vt100_out.c  vt100_out.h
lib/utils/: hexdump.c  hexdump.h  meson.build  salloc.c  salloc.h
log/: fgen_log.c  fgen_log.h  meson.build
mmap/: fgen_mmap.h  meson.build  mmap_private.h
src/: decode.c  decode.h  encode.c  fgen.c  fgen.h  meson.build
test/: fgen_test.c  fgen_test.h  meson.build
test/app/: fgen_test.c  fgen_test.h  meson.build
test/common/: meson.build  test.c  test.h  tst_info.c  tst_info.h
tools/: check_json.py  cndp-config.py  cndp-metrics.py  cndp.schema  cne-build.sh  gen_requirements.sh  jsonc_gen.sh  jsonc_gen_lport_groups.sh  rcndp  sudoGDB
tools/vscode/: c_cpp_properties.json  launch.json
