# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2024 Intel Corporation.

# Please keep the options sorted alphabetically.

option('enable_asserts', type: 'boolean', value: false,
    description: 'Enable FGEN asserts')

option('enable_docs', type: 'boolean', value: false,
    description: 'build documentation')

option('machine', type: 'string', value: 'native',
	description: 'set the target machine type')

option('verbose', type: 'boolean', value: false,
    description: 'Verbose build messages')

